[package]
name = "myrc"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "GPL-3.0-or-later"
description = "Unified CLI for UM HPC cluster resources"
categories = ["command-line-utilities"]
exclude = ["/dev/", "/docs/", "/dist/"]

[[bin]]
name = "myrc"
path = "bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "color"] }
clap_complete = "4"
clap_mangen = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1"
thiserror = "2"
terminal_size = "0.4"
colored = "2"
indicatif = "0.17"
human-panic = "2"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shadow-rs = { version = "1", default-features = false }

[build-dependencies]
shadow-rs = { version = "1", features = ["build"] }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.clippy]
enum_glob_use = "deny"
